[package]
name = "todo_app"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0" # コマンドラインインターフェースを選択した場合
thiserror = "1.0"
anyhow = "1.0"

# GUIベースのインターフェースを選択した場合
# (例: icedを使用する場合)
iced = { version = "0.5", features = ["tokio"] }

[dev-dependencies]
proptest = "1.0"
