[package]
name = "rust_todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
rusqlite = "0.26"
mysql_async = "0.27"
mio = { version = "0.7", features = ["tcp"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
lazy_static = "1.4"

# GUIベースのインターフェースを選択した場合
# (例: icedを使用する場合)
# iced = { version = "0.5", features = ["tokio"] }

# [dev-dependencies]
# proptest = "1.0"
